--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,10 @@
         xmlns:local="clr-namespace:MedicalFurnitureAccounting"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+    <StackPanel>
+        <!-- Frame для отображения страниц -->
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Height="425"/>
+        <!-- Кнопка для отображения страницы -->
+        <Button Content="Show Category Page" Click="Button_Click"/>
+    </StackPanel>
 </Window>
