--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,11 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MedicalFurnitureAccounting"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <StackPanel>
-        <!-- Frame для отображения страниц -->
-        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Height="425"/>
-        <!-- Кнопка для отображения страницы -->
-        <Button Content="Show Category Page" Click="Button_Click"/>
-    </StackPanel>
+        Title="Medical Furniture Accounting" Height="450" Width="800">
+    
+
+    <!-- Хедер (верхняя полоса) -->
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid Background="#007BFF" Height="50">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <!-- Логотип или название сайта -->
+            <TextBlock Text="Medical Furniture Accounting" VerticalAlignment="Center" Margin="10" Foreground="White" FontSize="20" FontWeight="Bold"/>
+
+            <!-- Навигационное меню -->
+            <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center">
+                <Button Content="Категории" Margin="10" Foreground="White" Background="Transparent" BorderBrush="Transparent" Click="Button_Click"/>
+                <Button Content="Материалы" Margin="10" Foreground="White" Background="Transparent" BorderBrush="Transparent" Click="Button_Click_Material_Page" />
+                <Button Content="Продукты" Margin="10" Foreground="White" Background="Transparent" BorderBrush="Transparent" Click="Button_Click_Product_Page" />
+                <Button Content="Поставщики" Margin="10" Foreground="White" Background="Transparent" BorderBrush="Transparent" Click="Button_Click_Supplier_Page" />
+                <Button Content="Поставки" Margin="10" Foreground="White" Background="Transparent" BorderBrush="Transparent"  Click="Button_Click_Supply_Page"/>
+            </StackPanel>
+        </Grid>
+
+        <!-- Основное содержимое -->
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Grid.Row="1"/>
+    </Grid>
+
 </Window>
