--- a/Pages/ProductsPage.xaml
+++ b/Pages/ProductsPage.xaml
@@ -1,15 +1,50 @@
 ﻿<Page x:Class="MedicalFurnitureAccounting.Pages.ProductsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:MedicalFurnitureAccounting.Pages"
-      mc:Ignorable="d"
-      Title="CategoryPage" Height="450" Width="800">
+      Title="Products Page" Height="450" Width="800">
     <Grid>
-        <!-- Разместите здесь содержимое вашей страницы -->
-        <StackPanel>
-            <ListView ItemsSource="{Binding Products}" Margin="10" Height="350">
+        <Grid.Resources>
+            <Style TargetType="Button">
+                <Setter Property="Margin" Value="10"/>
+                <Setter Property="Background" Value="#007BFF"/>
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="Padding" Value="10"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="BorderBrush" Value="#007BFF"/>
+                <Setter Property="MinWidth" Value="100"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border Background="{TemplateBinding Background}" CornerRadius="5" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="Margin" Value="0 0 10 0"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="Padding" Value="5"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="BorderBrush" Value="#007BFF"/>
+                <Setter Property="MinWidth" Value="120"/>
+            </Style>
+        </Grid.Resources>
+        <StackPanel Margin="10">
+            <StackPanel Orientation="Horizontal">
+                <TextBox x:Name="searchBox" Text="Search" GotFocus="SearchBox_GotFocus" LostFocus="SearchBox_LostFocus"/>
+
+                <Button Content="Search" Click="SearchButton_Click"/>
+                <Button Content="Show All" Click="ShowAllButton_Click"/>
+                <Button Content="Sort by Name" Click="SortByNameButton_Click"/>
+                <Button Content="Sort by ID" Click="SortByIDButton_Click"/>
+                <ComboBox x:Name="productsFilterComboBox" VerticalAlignment="Center" Margin="0 0 10 0" Padding="5" BorderThickness="1" BorderBrush="#007BFF" MinWidth="120" SelectionChanged="ProductsFilterComboBox_SelectionChanged"/>
+
+            </StackPanel>
+            <ListView ItemsSource="{Binding Products}" Margin="10" Height="350" Name="productsListView">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Product ID" DisplayMemberBinding="{Binding ProductId}"/>
@@ -18,7 +53,6 @@
                         <GridViewColumn Header="Material ID" DisplayMemberBinding="{Binding MaterialId}"/>
                         <GridViewColumn Header="Supply ID" DisplayMemberBinding="{Binding SupplyId}"/>
                         <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"/>
-                        <!-- Добавьте другие столбцы по вашему усмотрению -->
                     </GridView>
                 </ListView.View>
             </ListView>
