--- a/Pages/CategoryPage.xaml
+++ b/Pages/CategoryPage.xaml
@@ -7,80 +7,20 @@
       Title="CategoryPage" Height="450" Width="800">
     <StackPanel>
         <StackPanel Orientation="Horizontal" Margin="10" VerticalAlignment="Center">
-            <StackPanel.Resources>
-                <Style TargetType="{x:Type Button}">
-                    <Setter Property="Margin" Value="0,0,10,0" />
-                </Style>
-                <Style TargetType="{x:Type TextBox}">
-                    <Setter Property="Margin" Value="0,0,10,0" />
-                </Style>
-            </StackPanel.Resources>
-            <TextBox x:Name="searchBox" Text="Search" VerticalAlignment="Center" Padding="5" BorderThickness="1"
-                     BorderBrush="#007BFF" MinWidth="120"
-                     GotFocus="SearchBox_GotFocus" LostFocus="SearchBox_LostFocus" />
-            <Button Content="Search" Click="SearchButton_Click" Background="#007BFF" Foreground="White" Padding="10"
-                    Cursor="Hand" BorderThickness="0" MinWidth="100">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="5">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
-            </Button>
-            <Button Content="Show All" Click="ShowAllButton_Click" Background="#007BFF" Foreground="White" Padding="10"
-                    Cursor="Hand" BorderThickness="1" BorderBrush="#007BFF" MinWidth="100">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="5"
-                                BorderThickness="{TemplateBinding BorderThickness}"
-                                BorderBrush="{TemplateBinding BorderBrush}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
-            </Button>
-            <Button Content="Sort by Name" Click="SortByNameButton_Click" Background="#007BFF" Foreground="White"
-                    Padding="10" Cursor="Hand" BorderThickness="1" BorderBrush="#007BFF" MinWidth="100">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="5"
-                                BorderThickness="{TemplateBinding BorderThickness}"
-                                BorderBrush="{TemplateBinding BorderBrush}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
-            </Button>
+            <TextBox x:Name="SearchBox" Text="Search" Style="{StaticResource SearchBoxStyle}" />
+            <Button Content="Search" Click="SearchButton_Click" Style="{StaticResource ButtonStyle}" />
+            <Button Content="Show All" Click="ShowAllButton_Click" Style="{StaticResource ButtonStyle}" />
+            <Button Content="Sort by Name" Click="SortByNameButton_Click" Style="{StaticResource ButtonStyle}" />
 
-            <Button Content="Sort by ID" Click="SortByIDButton_Click" Background="#007BFF" Foreground="White"
-                    Padding="10" Cursor="Hand" BorderThickness="1" BorderBrush="#007BFF" MinWidth="100">
-                <Button.Template>
-                    <ControlTemplate TargetType="Button">
-                        <Border Background="{TemplateBinding Background}" CornerRadius="5"
-                                BorderThickness="{TemplateBinding BorderThickness}"
-                                BorderBrush="{TemplateBinding BorderBrush}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
-            </Button>
-            <ComboBox x:Name="categoryFilterComboBox" VerticalAlignment="Center" Margin="0 0 10 0" Padding="5"
-                      BorderThickness="1" BorderBrush="#007BFF" MinWidth="120"
-                      SelectionChanged="CategoryFilterComboBox_SelectionChanged" />
+            <Button Content="Sort by ID" Click="SortByIDButton_Click" Style="{StaticResource ButtonStyle}" />
 
+            <ComboBox x:Name="CategoryFilterComboBox" Style="{StaticResource ComboBoxStyle}" />
         </StackPanel>
-        <Button Content="Add Category" Click="AddCategoryButton_Click" Background="#007BFF" Foreground="White"
-                Padding="10" Cursor="Hand" BorderThickness="0" MinHeight="40" Margin="8">
-            <Button.Template>
-                <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}" CornerRadius="5">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                    </Border>
-                </ControlTemplate>
-            </Button.Template>
-        </Button>
-        <ListView ItemsSource="{Binding Categories}" Margin="10" Height="300" Name="categoryListView">
+
+        <Button Content="Add Category" Click="AddCategoryButton_Click" Style="{StaticResource ButtonStyle}"
+                Height="40" />
+
+        <ListView ItemsSource="{Binding Categories}" Margin="10" Height="300" Name="CategoryListView">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Category ID" DisplayMemberBinding="{Binding CategoryId}" />
