--- a/App.xaml
+++ b/App.xaml
@@ -29,6 +29,10 @@
             <Setter Property="BorderThickness" Value="1"/>
             <Setter Property="BorderBrush" Value="#007BFF"/>
             <Setter Property="MinWidth" Value="120"/>
+        </Style>
+
+        <Style x:Key="SearchTextBoxStyle" TargetType="{x:Type TextBox}"
+               BasedOn="{StaticResource TextBoxStyle}">
             <Style.Triggers>
                 <Trigger Property="IsFocused" Value="True">
                     <Setter Property="Text" Value=""/>
