--- a/Pages/CategoryPage.xaml
+++ b/Pages/CategoryPage.xaml
@@ -7,7 +7,7 @@
       Title="CategoryPage" Height="450" Width="800">
     <StackPanel>
         <StackPanel Orientation="Horizontal" Margin="10" VerticalAlignment="Center">
-            <TextBox x:Name="SearchBox" Text="Search" Style="{StaticResource TextBoxStyle}" />
+            <TextBox x:Name="SearchBox" Text="Search" Style="{StaticResource SearchTextBoxStyle}" />
             <Button Content="Search" Click="SearchButton_Click" Style="{StaticResource ButtonStyle}" />
             <Button Content="Show All" Click="ShowAllButton_Click" Style="{StaticResource ButtonStyle}" />
             <Button Content="Sort by Name" Click="SortByNameButton_Click" Style="{StaticResource ButtonStyle}" />
