--- a/Modals/AddMaterialModal.xaml
+++ b/Modals/AddMaterialModal.xaml
@@ -9,6 +9,8 @@
         <Label Content="ADD MATERIAL" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
         <Label Content="Name:" Margin="0 10 0 0"/>
         <TextBox x:Name="MaterialNameTextBox" Margin="10"/>
+        <Label Content="Product:"/>
+        <ComboBox x:Name="ProductComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Content="Add" HorizontalAlignment="Center" Margin="10" Click="AddButton_Click" />
             <Button Content="Cancel" HorizontalAlignment="Center" Margin="10" Click="CancelButton_Click" />
