--- a/Modals/AddMaterialModal.xaml
+++ b/Modals/AddMaterialModal.xaml
@@ -9,8 +9,8 @@
         <Label Content="ADD MATERIAL" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center"/>
         <Label Content="Name:" Margin="0 10 0 0"/>
         <TextBox x:Name="MaterialNameTextBox" Margin="10"/>
-        <Label Content="Room:" Margin="0 10 0 0"/>
-        <TextBox x:Name="MaterialRoomTextBox" Margin="10"/>
+        <Label Content="Price:" Margin="0 10 0 0"/>
+        <TextBox x:Name="MaterialPriceTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Content="Add" HorizontalAlignment="Center" Margin="10" Click="AddButton_Click" />
             <Button Content="Cancel" HorizontalAlignment="Center" Margin="10" Click="CancelButton_Click" />
