--- a/Modals/AddProductModal.xaml
+++ b/Modals/AddProductModal.xaml
@@ -16,6 +16,10 @@
         <ComboBox x:Name="SupplyComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10"/>
         <Label Content="Material:"/>
         <ComboBox x:Name="MaterialComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10"/>
+        <Label Content="Count:" Margin="0 10 0 0"/>
+        <TextBox x:Name="ProductCountTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput"/>
+        <Label Content="Room:" Margin="0 10 0 0"/>
+        <TextBox x:Name="ProductRoomTextBox" Margin="10"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="30">
             <Button Content="Add" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
             <Button Content="Cancel" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
